--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -8,6 +8,45 @@ $timeline-elem-padding: 300px;
     height: 100%;
   }
 
+  .timeline.education {
+    position: relative;
+    height: 100%;
+  }
+
+  .timeline.education-title {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+
+    h1, h2, h3 {
+      color: $niceGrey;
+      font-weight: 200;
+    }
+
+    .bigImage {
+      position: absolute;
+      @media only screen and (min-device-width : 320px) and (max-device-width : 479px) {
+        height: 100px;
+        width: 100px;
+      }
+      @media only screen and (min-device-width : 480px) and (max-device-width : 767px) {
+        height: 200px;
+        width: 200px;
+      }
+      @media only screen and (min-device-width : 768px) and (max-device-width : 1999px) {
+        height: 200px;
+        width: 200px;
+      }
+      margin: auto;
+      right: 0;
+      left: 0;
+      top: 0;
+      bottom: 0;
+    }
+  }
+
+
   .timeline.profile {
     position: absolute;
     left: 0;
@@ -92,25 +131,12 @@ $timeline-elem-padding: 300px;
     position: relative;
     padding: 0;
     img {
-      height: 100px;
+      width: 300px;
       margin: auto;
       position: absolute;
       top: 0;
       bottom: 0;
       left: 0;
-      &.bigImage {
-        @media only screen and (min-device-width : 320px) and (max-device-width : 479px) {
-          height: 200px;
-        }
-        @media only screen and (min-device-width : 480px) and (max-device-width : 767px) {
-          height: 350px;
-        }
-        @media only screen and (min-device-width : 768px) and (max-device-width : 1999px) {
-          height: 350px;
-        }
-        right: 0;
-        top: 0px;
-      }
     }
     .tabArea-root {
       position: absolute;
