--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -1,5 +1,20 @@
 @import '../../constants.scss';
 
+@-moz-keyframes slideIn {
+  0% { right: -700px; }
+  100% { right: 0; }
+}
+
+@-webkit-keyframes slideIn {
+  0% { right: -700px; }
+  100% { right: 0; }
+}
+
+@keyframes slideIn {
+  0% { right: -700px; }
+  100% { right: 0; }
+}
+
 $timeline-elem-padding: 300px;
 .cool-timeline-root {
   position: relative;
@@ -7,7 +22,6 @@ $timeline-elem-padding: 300px;
     width: 100%;
     height: 100%;
   }
-
 
   .timeline.details {
     height: 100%;
@@ -23,13 +37,22 @@ $timeline-elem-padding: 300px;
     .detail:first-child {
       padding-top: 10px;
     }
-  }
-
-  .timeline.detail {
-    color: $mainText;
-    font-size: 22px;
-    font-style: italic;
-    text-align: center;
+    .timeline.detail {
+      // This slides into right 0 position with slideIn animation
+      position: relative;
+      right: -700px;
+      color: $mainText;
+      font-size: 22px;
+      font-style: italic;
+      text-align: center;
+    }
+    .animate-detail {
+      .timeline.detail {
+        animation-name: slideIn;
+        animation-duration: 1s;
+        right: 0;
+      }
+    }
   }
 
   .timeline.education {
@@ -186,7 +209,7 @@ $timeline-elem-padding: 300px;
         }
         .description {
           position: absolute;
-          color: $subText;
+          color: $mainText;
           font-style: italic;
           text-align: center;
           bottom: 0;
