--- a/src/fragments/blog/blogSelector.scss
+++ b/src/fragments/blog/blogSelector.scss
@@ -4,4 +4,13 @@
   background-color: $backgroundOdd;
   position: relative;
   padding: 30px 100px;
+  @media only screen and (min-device-width : 320px) and (max-device-width : 479px) {
+    padding: 30px 10px;
+  }
+  @media only screen and (min-device-width : 480px) and (max-device-width : 767px) {
+    padding: 30px 100px;
+  }
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1999px) {
+    padding: 30px 100px;
+  }
 }
