--- a/src/components/profileTile.scss
+++ b/src/components/profileTile.scss
@@ -1,39 +1,17 @@
 @import '../constants.scss';
 .profile-tile-root {
-  -ms-box-orient: horizontal;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
+  @include flexboxJustify(flex-start);
   height: 75px;
   >div {
     position: relative;
   }
   .profile-tile.img-box {
-    width: 65px;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: center;
-    justify-content: center;
+    @include flexboxJustify(center);
     flex-direction: column;
+    width: 65px;
   }
   .profile-tile.title-box {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: center;
-    justify-content: center;
+    @include flexboxJustify(center);
     flex-direction: column;
   }
   .name {
@@ -48,8 +26,8 @@
   }
 
   .profile-tile.img-box img {
-    border-radius: 50%;
     width: 50px;
     height: 50px;
+    border-radius: 50%;
   }
 }
