--- a/src/components/tab.scss
+++ b/src/components/tab.scss
@@ -1,40 +1,22 @@
 @import '../constants.scss';
 
-@-moz-keyframes grow {
-  0% { -moz-transform: scale(0.1); }
-  50% { -moz-transform: scale(1.2); }
-  100% { -moz-transform: scale(1); }
-}
-
-@-webkit-keyframes grow {
-  0% { -webkit-transform: scale(0.1); }
-  50% { -webkit-transform: scale(1.2); }
-  100% { -webkit-transform: scale(1); }
-}
-
-@keyframes grow {
-  0% { transform: scale(0.1); }
-  50% { transform: scale(1.2); }
-  100% { transform: scale(1); }
-}
-
 $tabHeight: 27px;
 .tabArea-root {
+  // normal style is currently unused
   &.normal {
     position: relative;
     .tab {
+      display: inline-block;
+      float: right;
       height: 16px;
       padding: 5px;
-      display: inline-block;
       font-family: Arial;
       font-size: 14px;
       color: grey;
       border: 1px solid lightgrey;
       border-top: none;
       border-radius: 0 0 10px 10px;
-      float: right;
       cursor: pointer;
-
       &.selected {
         font-weight: bold;
         background-color: white;
@@ -50,10 +32,10 @@ $tabHeight: 27px;
       border-bottom: 1px solid lightgrey;
     }
     .tabs {
-      height: $tabHeight;
       position: absolute;
       bottom: 0;
       right: 0;
+      height: $tabHeight;
       width: 100%;
     }
   }
@@ -65,8 +47,8 @@ $tabHeight: 27px;
       animation-duration: .5s;
     }
     .tab {
-      padding: 5px;
       display: inline-block;
+      padding: 5px;
       color: grey;
       border: 1px solid lightgrey;
       border-radius: 10px;
@@ -101,19 +83,12 @@ $tabHeight: 27px;
       padding-top: 2px;
     }
     .tab-content {
+      @include flexboxJustify(center);
       height: calc(100% - #{$tabHeight});
+      flex-direction: column;
     }
     .tabs {
-      -ms-box-orient: horizontal;
-      display: -webkit-box;
-      display: -moz-box;
-      display: -ms-flexbox;
-      display: -moz-flex;
-      display: -webkit-flex;
-      display: flex;
-      -webkit-justify-content: center;
-      justify-content: center;
-
+      @include flexboxJustify(center);
       height: $tabHeight;
       width: 100%;
     }
