--- a/src/constants.scss
+++ b/src/constants.scss
@@ -8,6 +8,7 @@ $niceGrey: #edeeef;
 $darkGrey: #222222;
 $font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Cantarell", "Open Sans", "Helvetica Neue", "Ubuntu", sans-serif;
 
+$linkHover: lighten($carbon, 80%);
 
 $headerHeight: 50px;
 $footerHeight: 350px;
@@ -31,4 +32,74 @@ $subText: $carbon;
   @include flexbox();
   -webkit-justify-content: $just;
   justify-content: $just;
+}
+
+@mixin absoluteZero() {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+@mixin absoluteAuto() {
+  @include absoluteZero;
+  margin: auto;
+}
+
+@-moz-keyframes grow {
+  0% { -moz-transform: scale(0.1); }
+  50% { -moz-transform: scale(1.2); }
+  100% { -moz-transform: scale(1); }
+}
+
+@-webkit-keyframes grow {
+  0% { -webkit-transform: scale(0.1); }
+  50% { -webkit-transform: scale(1.2); }
+  100% { -webkit-transform: scale(1); }
+}
+
+@keyframes grow {
+  0% { transform: scale(0.1); }
+  50% { transform: scale(1.2); }
+  100% { transform: scale(1); }
+}
+
+@keyframes popup {
+  0% {
+    transform: translateX(700px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes fadein {
+  from {opacity: 0.1;}
+  to {opacity: 1;}
+}
+
+@-moz-keyframes fadein {
+  from {opacity: 0.1;}
+  to {opacity: 1;}
+}
+
+@-webkit-keyframes fadein {
+  from {opacity: 0.1;}
+  to {opacity: 1;}
+}
+
+@-moz-keyframes spin {
+  from {
+    -moz-transform: rotate(0deg) scale(0.1);
+  }
+  to { -moz-transform: rotate(360deg) scale(1); }
+}
+@-webkit-keyframes spin {
+  from { -webkit-transform: rotate(0deg) scale(0.1); }
+  to { -webkit-transform: rotate(360deg) scale(1); }
+}
+@keyframes spin {
+  from {transform:rotate(0deg) scale(0.1);}
+  to {transform:rotate(360deg) scale(1);}
 }
