--- a/src/fragments/blog/blogEntry.scss
+++ b/src/fragments/blog/blogEntry.scss
@@ -1,17 +1,12 @@
 @import '../../constants.scss';
 
 .blog-entry-root {
+  @include flexbox();
   border: 1px solid $carbon;
   background-color: $backgroundEven;
   border-radius: 20px;
   padding: 15px;
   margin-top: 20px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: flex;
   flex-direction: column;
   .blog-entry.title {
     color: $mainText;
@@ -27,14 +22,7 @@
   }
 
   .blog-entry.show-more {
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -moz-flex;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: center;
-    justify-content: center;
+    @include flexboxJustify(center);
     align-items: center;
     align-self: flex-end;
     color: $mainText;
