--- a/src/components/tab.scss
+++ b/src/components/tab.scss
@@ -58,15 +58,15 @@ $tabHeight: 27px;
       -moz-box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.75);
       box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.75);
       background-color: $backgroundOdd;
-      @media only screen and (min-device-width : 320px) and (max-device-width : 479px) {
+      @include mobile {
         height: 12px;
         font-size: 10px;
       }
-      @media only screen and (min-device-width : 480px) and (max-device-width : 767px) {
+      @include pad {
         height: 16px;
         font-size: 14px;
       }
-      @media only screen and (min-device-width : 768px) and (max-device-width : 1999px) {
+      @include desktop {
         height: 16px;
         font-size: 14px;
       }
