--- a/src/containers/appContentContainer.scss
+++ b/src/containers/appContentContainer.scss
@@ -45,7 +45,7 @@ h4 {
   font-weight: 200;
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 479px) {
+@include mobile {
   h1 {
     font-size: 36px;
   }
@@ -62,7 +62,7 @@ h4 {
     font-size: 14px;
   }
 }
-@media only screen and (min-device-width : 480px) and (max-device-width : 767px) {
+@include pad {
   h1 {
     font-size: 42px;
   }
