--- a/src/fragments/blog/blog/blogBase.scss
+++ b/src/fragments/blog/blog/blogBase.scss
@@ -47,4 +47,15 @@ $edgePadding: 10vw;
     align-items: center;
     padding: 60px 0 30px 0;
   }
+  .blog-base.code {
+    resize: none;
+    width: 100%;
+    margin: 15px 0;
+    border-radius: 3px;
+    padding: 15px 5px 5px 5px;
+    background-color: $backgroundOdd;
+    &:focus {
+      outline: none;
+    }
+  }
 }
