--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -61,20 +61,9 @@ $timeline-elem-padding: 300px;
     }
 
     .bigImage {
-      @include absoluteAuto();
-      @include mobile {
-        height: 100px;
-        width: 100px;
-        top: 75px;
-      }
-      @inclide pad {
-        height: 200px;
-        width: 200px;
-      }
-      @include desktop {
-        height: 200px;
-        width: 200px;
-      }
+      padding-top: 10px;
+      height: 23vw;
+      width: 23vw;
     }
   }
 
@@ -145,6 +134,12 @@ $timeline-elem-padding: 300px;
   .start-end-dates {
     text-align: center;
   }
+
+  .timeline.education-image-container {
+    @include flexboxJustify(center);
+    width: 100%;
+  }
+
   >.tagcloud-root {
     background-color: $backgroundOdd;
   }
