--- a/src/fragments/coolTimeline/timeline.scss
+++ b/src/fragments/coolTimeline/timeline.scss
@@ -151,14 +151,31 @@ $timeline-elem-padding: 300px;
 
   .timeline-elem-wrapper {
     @include flexboxJustify(space-around);
-    img {
+    img.notIe {
       width: 300px;
       margin: auto 0;
     }
-    .sql {
-      // SQL power is id 4
+    img.id4.notIe {
       height: 300px;
     }
+    img.id10.ie, img.id9.ie {
+      transform: scale(0.33);
+      margin: auto 0;
+    }
+    img.id8.ie, img.id5.ie {
+      transform: scale(0.33);
+      margin: auto 0;
+    }
+    img.id4.ie {
+      height: 300px;
+      width: 300px;
+      margin: auto 0;
+    }
+    img.id3.ie {
+      transform: scale(1, 0.5);
+      margin: auto 0;
+    }
+    
     .tabArea-root {
 
       @include mobile {
