--- a/src/app/modules/timeline/profileArea/profileArea.css
+++ b/src/app/modules/timeline/profileArea/profileArea.css
@@ -41,6 +41,7 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
+  max-height: calc(100vh - 50px);
   width: 100%;
   top: 0;
 }
